name:                sloppy-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/jhedev/sloppy-test
license:             BSD3
license-file:        LICENSE
author:              Joel Hermanns
maintainer:          joel.hermanns@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable sloppy-test
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jhedev/sloppy-test
